k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
